2012-05-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences/plugin.py, preferences/treeview.py: Fixed minor bugs.
	* preferences/plugin.py: Fixed an old symbol.

2012-03-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* po/it.po, help/it/it.po: Updated Italian translation.
	  Thanks Cristian Marchi!
	* gphotoframe.schemas.in: Fixed typos.

2012-02-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.5.1 release.

2012-02-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe: Renamed the product name from GNOME Photo Frame to
	  GPhotoFrame (issue #104).

2012-02-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.0-a1 release.
	* es.po: Added new translation.  Thanks jorjuardo!
	* com.googlecode.gphotoframe.schemas: Added new section 'geometry'.

2012-01-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.5 release.
	* facebook/__init__.py (FacebookPhotoList): Ignore some entries
	  which have not picture URIs.

2012-01-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.5-rc1 release.
	* actor/map.py: Avoid a problem of Champlain.NetworkTileSource.

2011-12-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* gphotoframe: Fixed gtkclutter no reactive problem.
	* actor/map.py: Fixed_location method.

2011-12-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* facebook/__init__.py (FacebookAlbumListStore): Fixed a bug.

2011-12-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* keyring.py: Added support for Secret API.

2011-12-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* dbus/networkstate.py, dbus/idelechck.py: Migrated to GDBus
	  (issue #103).
	* preferences/*, preferences.ui: Code refactoring.

2011-12-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* facebook/authdialog.py: Added a loading spinner.

2011-12-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.5-b3 release.
	* urlgetautoproxy.py: Improved error handling.
	* html.py: Added size attributes on icon image tags.