@@ -1,3 +1,7 @@
+2012-12-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* plugins/shotwell.py: Added support for shotwell 0.13 data base.
+
 2012-05-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* preferences/plugin.py, preferences/treeview.py: Fixed minor bugs.
